--- a/frontend/src/components/Headers/css/headerdown.css
+++ b/frontend/src/components/Headers/css/headerdown.css
@@ -52,9 +52,4 @@
   position: sticky;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
-  transition: background-color 1s ease-in-out; /* Add transition for background color */
-}
-
-.dropdown.dark-mode {
-  background-color: #DF0B35; /* Change the background color for Dark Mode */
 }
